# GGBoy

./: .gitignore  CMakeLists.txt  GB.h  GB_CONST.h  GB_GPU.h  GB_MEM.h  flake.nix  main.cpp  readme.md
.github/workflows/: build.yml
include/: GB.h  GB_CONST.h  GB_CPU.h  GB_GPU.h  GB_MEM.h
src/GB/: GB.cpp  GB_CPU.cpp  GB_GPU.cpp  GB_MEM.cpp
